adding name in annotation isoform specificity

--- a/web/src/main/webapp/WEB-INF/velocity/target-isoform-list-annotation.xml.vm
+++ b/web/src/main/webapp/WEB-INF/velocity/target-isoform-list-annotation.xml.vm
@@ -1,6 +1,6 @@
 <target-isoform-list>
 	#foreach($isospec in $target-isoform-list.values())
-		<target-isoform accession="$isospec.isoformName" specificity='$isospec.specificity'>
+		<target-isoform accession="$isospec.isoformName" specificity='$isospec.specificity' #if($isospec.name)name='$isospec.name'#end>
 		#if($isospec.isPositional())
             <location #if($NXUtils.isDisulfideBond($annotation)) type='disulfide-bond'
 			#elseif($NXUtils.isCrossLink($annotation)) type='cross-link' #end>
