adding evidence note in xml

--- a/web/src/main/webapp/WEB-INF/velocity/annotation.xml.vm
+++ b/web/src/main/webapp/WEB-INF/velocity/annotation.xml.vm
@@ -71,6 +71,10 @@
 						#end
 					</property-list>
 				#end
+				#if($evidence.getNote())
+					#set($UNESCAPED_CDATA = $evidence.getNote())
+					<evidence-note><![CDATA[$UNESCAPED_CDATA]]></evidence-note>
+				#end
 			</evidence>
 		#end
     </evidence-list>
