--- a/web/src/main/webapp/WEB-INF/velocity/turtle/prefix.ttl.vm
+++ b/web/src/main/webapp/WEB-INF/velocity/turtle/prefix.ttl.vm
@@ -21,4 +21,5 @@
 @prefix skos: <http://www.w3.org/2004/02/skos/core#> .
 @prefix uniprot: <http://purl.uniprot.org/uniprot/> .
 @prefix unipage: <http://www.uniprot.org/uniprot/> .
+@prefix proteoform: <http://nextprot.org/rdf/proteoform/> .
 
