temp fix to avoid to have $ in case of publication resource without DM5 (evidence not fully defined from BED)

--- a/web/src/main/webapp/WEB-INF/velocity/turtle/isoform-annotation-evidence.ttl.vm
+++ b/web/src/main/webapp/WEB-INF/velocity/turtle/isoform-annotation-evidence.ttl.vm
@@ -23,10 +23,11 @@ evidence:$evidence-uri
 #if($evidence.getExperimentalContextId()>0)
   :experimentalContext context:$evidence.getExperimentalContextId();
 #end
-##  :$evidence.getResourceType() publication:$evidence.getResourceAccession()
-## resource => database (xref:P06213,...) , Publication (publi id=getResourceId())
 #if($evidence.getResourceType().equals("publication"))
+## temp fix to remove
+#if($evidence.getPublicationMD5())
   :reference publication:$evidence.getPublicationMD5();
+#end
 #end
 #if($evidence.getResourceType().equals("database"))
 #set($UNESCAPED_CDATA = $evidence.resourceAccession)
