Fixing velocity xml template for subject element

--- a/web/src/main/webapp/WEB-INF/velocity/annotation.xml.vm
+++ b/web/src/main/webapp/WEB-INF/velocity/annotation.xml.vm
@@ -1,5 +1,5 @@
 <annotation quality='$annotation.getQualityQualifier()' annotation-internal-id='#if($annotation.getAnnotationHash())$annotation.getAnnotationHash()#else$annotation.getAnnotationId()#end'>
-	#if($annotation.getSubjectName())
+	#if($annotation.getSubjectComponents())
     <biological-subject>
     	<biological-subject-component-list>
 	    #foreach($component in $annotation.getSubjectComponents())
