deprecated AnnotationIsoformSpecificity getIsoformName() and setIsoformName(), updated code and templates using new names setIsoformAccession(), getIsoformAccession(), now we also set AnnotationIsoformSpecificity.name when we turn binary interactions into annotations

--- a/web/src/main/webapp/WEB-INF/velocity/target-isoform-list.xml.vm
+++ b/web/src/main/webapp/WEB-INF/velocity/target-isoform-list.xml.vm
@@ -1,6 +1,6 @@
 <target-isoform-list>
 	#foreach($target in $target-isoform-list)
-		<target-isoform accession='$target.isoformName'>
+		<target-isoform accession='$target.isoformAccession'>
 			<position-list>
 				<position start="$target.getFirstPosition()" end="$target.getLastPosition()" #if($isospec.name)name='$isospec.name'#end/>
 			</position-list>
