removing publicationMD5 from evidence

--- a/web/src/main/webapp/WEB-INF/velocity/turtle/publication.ttl.vm
+++ b/web/src/main/webapp/WEB-INF/velocity/turtle/publication.ttl.vm
@@ -1,7 +1,7 @@
 #if($prefix)
 #parse("turtle/prefix.ttl.vm")
 #end
-publication:$publication.getMD5() a :Publication;
+publication:$publication.getPublicationId() a :Publication;
 #if($publication.getIsLargeScale())
     rdf:type :LargeScalePublication;
 #end
