another required adaptation to get rid of publication MD5 as IRI

--- a/web/src/main/webapp/WEB-INF/velocity/turtle/entry-references.ttl.vm
+++ b/web/src/main/webapp/WEB-INF/velocity/turtle/entry-references.ttl.vm
@@ -34,5 +34,5 @@ entry:$entry.uniqueName :reference [
 # - - - - - - - -
 
 #foreach($pub in $entry.publications)
-entry:$entry.uniqueName :reference publication:$pub.getMD5() .
+entry:$entry.uniqueName :reference publication:$pub.getPublicationId() .
 #end
