Remove setResolvedUrl() and change signature of getResolvedUrl

--- a/web/src/main/webapp/WEB-INF/velocity/xref.xml.vm
+++ b/web/src/main/webapp/WEB-INF/velocity/xref.xml.vm
@@ -9,7 +9,7 @@
 		</property-list>
 	#end
 	<url>
-	#set($UNESCAPED_CDATA = $xref.getResolvedUrl())
+	#set($UNESCAPED_CDATA = $xref.getResolvedUrl($entry.getUniqueName()))
 	<![CDATA[$UNESCAPED_CDATA]]>
 	</url>
 </xref>
