--- a/web/src/main/webapp/WEB-INF/velocity/turtle/entry.ttl.vm
+++ b/web/src/main/webapp/WEB-INF/velocity/turtle/entry.ttl.vm
@@ -3,6 +3,7 @@
 entry:$entry.getUniqueName() a :Entry;
   skos:exactMatch uniprot:$entry.getUniprotName();
   :swissprotPage unipage:$entry.getUniprotName();
+  :isoformCount "$entry.getIsoforms().size()"^^xsd:integer;
 ## Links to isoforms
 #foreach($isoform in $entry.getIsoforms())
 #set($isoform-name =  $isoform.getUniqueName())
