--- a/web/src/main/webapp/WEB-INF/velocity/turtle/chromosomal-location-list.ttl.vm
+++ b/web/src/main/webapp/WEB-INF/velocity/turtle/chromosomal-location-list.ttl.vm
@@ -8,5 +8,6 @@ gene:$StringUtils.slug($chromosomalLocation.getAccession()) a :Gene;
     :begin "$chromosomalLocation.getFirstPosition()"^^xsd:integer; 
     :end "$chromosomalLocation.getLastPosition()"^^xsd:integer;  
     :length "$chromosomalLocation.getLength()"^^xsd:integer;  
+    :bestGeneLocation "$chromosomalLocation.isBestGeneLocation()"^^xsd:boolean; 
     .
 #end
