Refactor the whole peff package

--- a/web/src/main/webapp/WEB-INF/velocity/peff/entry.peff.vm
+++ b/web/src/main/webapp/WEB-INF/velocity/peff/entry.peff.vm
@@ -1,4 +1,4 @@
 #foreach($isoform in $entry.isoforms)
->nxp:$NXUtils.buildPeffHeader($entry, $isoform)$StringUtils.getCR()
+$NXUtils.buildPeffHeader($entry, $isoform)$StringUtils.getCR()
 $StringUtils.wrapText($isoform.getSequence(), 60)$StringUtils.getCR()
 #end
