Do not escape reserved html characters in PEFF view

--- a/web/src/main/webapp/WEB-INF/velocity/peff/entry.peff.vm
+++ b/web/src/main/webapp/WEB-INF/velocity/peff/entry.peff.vm
@@ -1,4 +1,5 @@
 #foreach($isoform in $entry.isoforms)
->${peffByIsoform.get($isoform.getIsoformAccession())}$StringUtils.getCR()
+    #set($UNESCAPED_CDATA = ${peffByIsoform.get($isoform.getIsoformAccession())})
+>$UNESCAPED_CDATA$StringUtils.getCR()
 $StringUtils.wrapText($isoform.getSequence(), 60)$StringUtils.getCR()
 #end
