Changing getPublicationType() callers (return type changed)

--- a/web/src/main/webapp/WEB-INF/velocity/turtle/publication.ttl.vm
+++ b/web/src/main/webapp/WEB-INF/velocity/turtle/publication.ttl.vm
@@ -9,7 +9,7 @@ publication:$publication.getPublicationId() a :Publication;
 #set($UNESCAPED_CDATA = $publication.title)
     :title """$StringUtils.clean($UNESCAPED_CDATA)"""^^xsd:string;
 #end
-    :pubType "$publication.getPublicationType()"^^xsd:string;
+    :pubType "$publication.getPublicationType().name()"^^xsd:string;
 #if($publication.isLocalizable())
     :journal "$publication.getPublicationLocatorName()"^^xsd:string;
 #if($publication.getPublicationYear())
