Clients of deprecated Publication flags getters now uses PublicationService.getPublicationStatistics()

--- a/web/src/main/webapp/WEB-INF/velocity/turtle/publication.ttl.vm
+++ b/web/src/main/webapp/WEB-INF/velocity/turtle/publication.ttl.vm
@@ -2,7 +2,7 @@
 #parse("turtle/prefix.ttl.vm")
 #end
 publication:$publication.getPublicationId() a :Publication;
-#if($publication.getIsLargeScale())
+#if($isLargeScale)
     rdf:type :LargeScalePublication;
 #end
 #if($publication.hasTitle())
