--- a/web/src/main/webapp/WEB-INF/velocity/release-stats.xml.vm
+++ b/web/src/main/webapp/WEB-INF/velocity/release-stats.xml.vm
@@ -1,6 +1,6 @@
 <release>
       <data-source-list>
-          #foreach($rds in $release.datasources)
+          #foreach($rds in $release-stats.datasources)
               <data-source source='$rds.source' description="$rds.description" release="$rds.releaseVersion" last-import-date="$rds.lastImportDate">
                   <url><![CDATA[$rds.url]]></url>
               </data-source>
