--- a/web/src/main/webapp/WEB-INF/velocity/release-contents.xml.vm
+++ b/web/src/main/webapp/WEB-INF/velocity/release-contents.xml.vm
@@ -4,7 +4,7 @@
         <api-release>$versions.apiRelease</api-release>
     </nextprot>
     <data-source-list>
-        #foreach($rds in $data-sources.datasources)
+        #foreach($rds in $dataSources.datasources)
             <data-source source='$rds.source' description="$rds.description" release="$rds.releaseVersion" last-import-date="$rds.lastImportDate">
                 <url><![CDATA[$rds.url]]></url>
             </data-source>
