--- a/web/src/main/webapp/WEB-INF/velocity/export-footer.xml.vm
+++ b/web/src/main/webapp/WEB-INF/velocity/export-footer.xml.vm
@@ -1,6 +1,6 @@
     </entry-list>
     <copyright>
         Copyrighted by the SIB Swiss Institute of Bioinformatics.
-        Distributed under the Creative Commons Attribution-NoDerivs License - see http://creativecommons.org/licenses/by-nd/3.0/
+        Distributed under the Creative Commons Attribution 4.0 International Public License (CC BY 4.0) - see https://creativecommons.org/licenses/by/4.0/
     </copyright>
 </nextprot-export>
